feat: added image to the documentation

--- a/app/docs/typography/images/image.mdx
+++ b/app/docs/typography/images/image.mdx
@@ -10,6 +10,9 @@ Get started with a collection of responsive image components coded with the util
 
 Use this example to show the responsive image that won’t grow beyond the maximum original width.
 
-<CodePreview title="Image" className="grid grid-flow-col justify-stretch space-x-4">
-  <Image />
+<CodePreview title="Image" className="flex items-center justify-center">
+  <Image
+    src="https://images.unsplash.com/photo-1601625463687-25541fb72f62?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80"
+    alt="this is the description"
+  />
 </CodePreview>
